<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CateringApp</string>
    <string name="title_home">Головна</string>
    <string name="title_dashboard">Панель керування</string>
    <string name="title_notifications">Сповіщення</string>
    <string name="title_login">Вхід</string>
    <string name="login">Вхід</string>
    <string name="please_sign_in_to_continue">Увійдіть щоб продовжити</string>
    <string name="please_sign_up_to_continue">Зареєструйтесь щоб продовжити</string>
    <string name="enter_email">Введіть електронну пошту</string>
    <string name="enter_password">Введіть пароль</string>
    <string name="business_image">Зображення закладу</string>
    <string name="booking">Бронювання</string>
    <string name="available_catering">Доступні заклади</string>
    <string name="register">Реєстрація</string>
    <string name="enter_your_email_address">Введіть вашу електронну адресу</string>
    <string name="enter_ypur_phone_number">Введіть ваш номер телефону</string>
    <string name="enter_your_name">Введіть ваше ім\'я</string>
    <string name="enter_your_surname">Введіть ваше прізвище</string>
    <string name="sign_up">Зареєструватися?</string>
    <string name="sign_in">Увійти?</string>
    <string name="profile">Профіль</string>
    <string name="logout">Вийти</string>
    <string name="orders">Замовлення</string>
    <string name="menu">Меню</string>
    <string name="business">Заклад</string>
    <string name="menu_item_image">Зображення пункту меню</string>
    <string name="total">Сума:</string>
    <string name="enter_menu_item_name">Введіть назву пункту меню</string>
    <string name="enter_item_metrics">Введіть параметри пункту</string>
    <string name="enter_item_price">Введіть ціну пункту</string>
    <string name="enter_item_description">Введіть опис пункту</string>
    <string name="set_new_image">Оновити зображення</string>
    <string name="add_new_menu_item">Додати новий пункт меню</string>
    <string name="edit_menu_item">Редагувати пункт меню</string>
    <string name="new_menu_item">новий пункт меню</string>
    <string name="create">Створити</string>
    <string name="create_new_booking">Створити нове бронювання</string>
    <string name="choose_business_for_booking">Виберіть заклад для бронювання</string>
    <string name="book">Забронювати</string>
    <string name="time">Час:</string>
    <string name="date">Дата:</string>
    <string name="people_count">Кількість людей:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Привіт, порожній фрагмент</string>
    <string name="basket">Кошик</string>
    <string name="invalid_email">Неправильна електронна пошта</string>
    <string name="server_unavailable">Сервер недоступний</string>
    <string name="internet_connection_error">Помилка підключення до Інтернету</string>
    <string name="network_error">Помилка мережі</string>
    <string name="delete_item">Видалити пункт</string>
    <string name="edit_item">Редагувати пункт</string>
    <string name="user_icon">Іконка користувача</string>
    <string name="user">Користувач</string>
    <string name="log_out">Вийти</string>
    <string name="catering_icon">Іконка закладу</string>
    <string name="select_business">Виберіть заклад</string>
    <string name="cant_load_business_selected_business">Не вдалося завантажити вибраний заклад</string>
    <string name="business_menu">Меню закладу</string>
    <string name="can_t_delete_the_item">Не вдалося видалити пункт</string>
    <string name="order_history">Історія замовлень</string>
    <string name="order_details">Деталі замовлення</string>
    <string name="your_order">Ваше замовлення</string>
    <string name="active_orders">Активні замовлення</string>
    <string name="count">Кількість:</string>
    <string name="edit_order">Редагувати замовлення</string>
    <string name="place_order">Надіслати замовлення</string>
    <string name="my_bookings">Мої бронювання</string>
    <string name="business_booking">Бронювання закладу</string>
    <string name="enter_phone_number">Введіть номер телефону</string>
    <string name="enter_name">Введіть ім\'я</string>
    <string name="enter_surname">Введіть прізвище</string>
    <string name="update">Оновити</string>
    <string name="add_to_order">Додати до замовлення</string>
    <string name="add_to_remote_order_message">Ваше замовлення вже надіслано, бажаєте додати до нього дану позицію?</string>
    <string name="order_update">Оновлення замовлення</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="ask_for_payment">Запросити оплату</string>
    <string name="your_order_is_empty">Ваше замовлення пусте</string>
    <string name="waiting_for_payment">Очікується оплата</string>
    <string name="order_is_not_sent">Замовлення не надіслано</string>
    <string name="order_is_sent">Замовлення надіслано</string>
    <string name="edit_personal_data">Редагувати персональну інформацію</string>
    <string name="personal_data_edit">Редагування даних</string>
    <string name="enter_new_password">Введіть новий пароль</string>
    <string name="update_data">Оновити дані</string>
    <string name="customer">Замовник:</string>
    <string name="edit_business_data">Редагувати дані про заклад</string>
    <string name="enter_address">Введіть адресу</string>
    <string name="enter_working_time">Введіть час роботи</string>
    <string name="endter_business_phone">Введіть номер телефону закладу</string>
    <string name="endter_business_link">Введіть поссилання на ресурс закладу</string>
    <string name="business_info">Інформація про бізнес</string>
    <string name="news">Новини</string>
    <string name="img_to_news">Зображення до новини</string>
    <string name="news_img">Зображення новини</string>
    <string name="delete_news">Видалити новину</string>
    <string name="enter_news_name">Введіть назву новини</string>
    <string name="enter_news_text">Ведіть текст новини</string>
    <string name="active_bookings">Активні бронювання</string>
    <string name="history">Історія</string>
    <string name="enter_table_name">Введіть номер столика</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="extra_data">Додаткові дані</string>
    <string name="details">Деталі:</string>
    <string name="sent">Надіслати</string>
    <string name="clear">Очистити</string>
    <string name="empty_here">Тут пусто</string>
    <string name="info">Інформація:</string>
    <string name="you_didnt_write_the_table">Ви не вказали столик</string>
    <string name="add">Додати</string>
    <string name="count_shorted">Кіл-сть:</string>
    <string name="add_position">Додати позицію</string>
    <string name="enter_bis_name">Введіть назву</string>
    <string name="create_new_business">Створити новий бізнес</string>

</resources>
