<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_orders"
    app:startDestination="@+id/navigation_admin_orders">

    <fragment
        android:id="@+id/navigation_admin_orders"
        android:name="com.example.cateringapp.ui.admin.orders.AdminOrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_admin_menu" >
        <action
            android:id="@+id/action_navigation_admin_orders_to_navigation_admin_order_details"
            app:destination="@id/navigation_admin_order_details" />
    </fragment>


    <fragment
        android:id="@+id/navigation_admin_order_details"
        android:name="com.example.cateringapp.ui.admin.orders.AdminOrderDetailsFragment"
        android:label="@string/order_details"
        tools:layout="@layout/fragment_rv_text_on_top" >
        <argument
            android:name="orderId"
            app:argType="integer"
            android:defaultValue="-1" />
        <action
            android:id="@+id/action_navigation_admin_order_details_to_navigation_admin_order_add"
            app:destination="@id/navigation_admin_order_add" />
    </fragment>

    <fragment
        android:id="@+id/navigation_admin_order_add"
        android:name="com.example.cateringapp.ui.admin.orders.MenuToAddFragment"
        android:label="@string/add_to_order"
        tools:layout="@layout/fragment_admin_menu" >
        <argument
            android:name="orderId"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>


</navigation>