<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        tools:context=".ui.auth.LoginFragment">

        <ImageView
            android:id="@+id/img"
            android:layout_width="@dimen/imgSize"
            android:layout_height="@dimen/imgSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_new_image"
            app:layout_constraintTop_toTopOf="@id/img"
            app:layout_constraintBottom_toBottomOf="@id/img"
            app:layout_constraintStart_toEndOf="@id/img"
            app:layout_constraintEnd_toEndOf="parent" />



        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/start_screen_margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Введіть назву закладу"
                android:paddingTop="@dimen/top_element_padding">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_address"
                android:paddingTop="@dimen/top_element_padding">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_working_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_working_time"
                android:paddingTop="@dimen/top_element_padding">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_working_hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endter_business_phone"
                android:paddingTop="@dimen/top_element_padding">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endter_business_link"
                android:paddingTop="@dimen/top_element_padding">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_element_padding"
                android:text="@string/update"
                android:textAllCaps="true" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>